Move token creation into /auth/tokens route, allow POST /auth/tokens through JWT filter
